--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
             </div>
             <div class="table-container">
                 <table id="importedTable">
-                    <!-- Tabela mantida igual -->
+                    <thead>
+                        <tr>
+                            <th>Data</th>
+                            <th>Tipo</th>
+                            <th>Atividade</th>
+                            <th>WISE</th>
+                            <th>Mantenedor</th>
+                            <th>Observações</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
                 </table>
             </div>
         </section>
@@ -75,7 +85,7 @@
                     </button>
                 </div>
             </form>
-            
+
             <div class="table-actions">
                 <button onclick="exportToPDF()" class="btn danger">
                     <i class="fas fa-file-pdf"></i> Exportar PDF
@@ -83,7 +93,17 @@
             </div>
             <div class="table-container">
                 <table id="manualTable">
-                    <!-- Tabela mantida igual -->
+                    <thead>
+                        <tr>
+                            <th>Data</th>
+                            <th>Tipo</th>
+                            <th>Atividade</th>
+                            <th>WISE</th>
+                            <th>Mantenedor</th>
+                            <th>Observações</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
                 </table>
             </div>
         </section>
