--- a/index.html
+++ b/index.html
@@ -1,74 +1,178 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Armazenamento de Relatórios</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
-</head>
-<body>
-    <div class="container">
-        <h1>Armazenamento de Relatórios</h1>
-        <div class="section">
-            <h2>Importar Dados do Excel</h2>
-            <input type="file" id="fileInput" accept=".xlsx, .xls">
-            <button onclick="importData()">Importar Dados</button>
-            <table id="importedTable">
-                <thead>
-                    <tr>
-                        <th>Data</th>
-                        <th>Tipo</th>
-                        <th>Ordem</th>
-                        <th>Atividade</th>
-                        <th>Wise</th>
-                        <th>Mantenedor</th>
-                        <th>Checklist</th>
-                        <th>Ações</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Linhas serão inseridas aqui -->
-                </tbody>
-            </table>
-        </div>
-        <div class="section">
-            <h2>Adicionar Dados Manualmente</h2>
-            <form id="manualForm">
-                <label for="data">Data:</label>
-                <input type="date" id="data" name="data" required>
-                <label for="tipo">Tipo:</label>
-                <input type="text" id="tipo" name="tipo" required>
-                <label for="atividade">Atividade:</label>
-                <input type="text" id="atividade" name="atividade" required>
-                <label for="wise">Wise:</label>
-                <input type="text" id="wise" name="wise" required>
-                <label for="mantenedor">Mantenedor:</label>
-                <input type="text" id="mantenedor" name="mantenedor" required>
-                <label for="observacao">Observação:</label>
-                <textarea id="observacao" name="observacao" required></textarea>
-                <button type="button" onclick="addManualData()">Adicionar</button>
-            </form>
-            <table id="manualTable">
-                <thead>
-                    <tr>
-                        <th>Data</th>
-                        <th>Tipo</th>
-                        <th>Atividade</th>
-                        <th>Wise</th>
-                        <th>Mantenedor</th>
-                        <th>Observação</th>
-                        <th>Ações</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Linhas serão inseridas aqui -->
-                </tbody>
-            </table>
-            <button onclick="exportToPDF()">Exportar para PDF</button>
-        </div>
-    </div>
-    <script src="script.js"></script>
-</body>
-</html>
+/* CSS Modernizado */
+:root {
+    --primary-color: #2c3e50;
+    --secondary-color: #3498db;
+    --success-color: #27ae60;
+    --danger-color: #e74c3c;
+    --text-color: #34495e;
+    --background-color: #f8f9fa;
+    --border-color: #ecf0f1;
+}
+
+body {
+    font-family: 'Segoe UI', system-ui, sans-serif;
+    background-color: var(--background-color);
+    color: var(--text-color);
+    line-height: 1.6;
+    margin: 0;
+    padding: 20px;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.main-header {
+    text-align: center;
+    margin-bottom: 2rem;
+    padding: 2rem;
+    background: var(--primary-color);
+    color: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.section {
+    background: white;
+    border-radius: 12px;
+    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
+    margin-bottom: 2rem;
+    padding: 2rem;
+}
+
+.file-input-container {
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.grid-form {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 1rem;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-group.full-width {
+    grid-column: 1 / -1;
+}
+
+label {
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+    color: var(--primary-color);
+}
+
+input, select, textarea {
+    padding: 0.8rem;
+    border: 2px solid var(--border-color);
+    border-radius: 6px;
+    font-size: 1rem;
+    transition: border-color 0.3s ease;
+    width: 100%;
+}
+
+input:focus, select:focus, textarea:focus {
+    border-color: var(--secondary-color);
+    outline: none;
+}
+
+.btn {
+    padding: 0.8rem 1.5rem;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: 600;
+    display: inline-flex;
+    align-items: center;
+    gap: 0.5rem;
+    transition: transform 0.2s, opacity 0.2s;
+    text-decoration: none;
+}
+
+.btn:hover {
+    transform: translateY(-2px);
+    opacity: 0.9;
+}
+
+.btn.primary {
+    background: var(--secondary-color);
+    color: white;
+}
+
+.btn.success {
+    background: var(--success-color);
+    color: white;
+}
+
+.btn.danger {
+    background: var(--danger-color);
+    color: white;
+}
+
+.table-container {
+    overflow-x: auto;
+    margin-top: 1rem;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    background: white;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+th, td {
+    padding: 1rem;
+    text-align: left;
+    border-bottom: 1px solid var(--border-color);
+}
+
+th {
+    background: var(--primary-color);
+    color: white;
+    font-weight: 600;
+}
+
+tr:hover {
+    background-color: #f8f9fa;
+}
+
+.actions-cell {
+    display: flex;
+    gap: 0.5rem;
+}
+
+.actions-cell button {
+    margin: 0;
+    padding: 0.5rem 0.8rem;
+    font-size: 0.9rem;
+    border-radius: 4px;
+    background: var(--danger-color);
+    color: white;
+    border: none;
+    cursor: pointer;
+    transition: background 0.3s, transform 0.2s;
+}
+
+.actions-cell button:hover {
+    background: #d9534f;
+    transform: translateY(-2px);
+}
+
+@media (max-width: 768px) {
+    .grid-form {
+        grid-template-columns: 1fr;
+    }
+
+    .file-input-container {
+        flex-direction: column;
+        gap: 1rem;
+    }
+}
