--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Armazenamento de Relatórios</title>
+    <title>Gestão de Relatórios</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
@@ -11,14 +12,21 @@
 <body>
     <div class="container">
         <header class="main-header">
-            <h1>Armazenamento de Relatórios</h1>
+            <h1><i class="fas fa-file-alt"></i> Gestão de Relatórios Técnicos</h1>
         </header>
-        <div class="section">
-            <h2>Importar Dados do Excel</h2>
-            <div class="file-input-container">
-                <input type="file" id="fileInput" accept=".xlsx, .xls" hidden>
-                <label for="fileInput" class="btn primary">Escolher Arquivo</label>
-                <button onclick="importData()" class="btn success">Importar Dados</button>
+
+        <section class="card import-section">
+            <div class="card-header">
+                <h2><i class="fas fa-file-import"></i> Importar Dados do Excel</h2>
+                <div class="file-input-container">
+                    <input type="file" id="fileInput" accept=".xlsx, .xls" hidden>
+                    <label for="fileInput" class="btn primary">
+                        <i class="fas fa-upload"></i> Selecionar Arquivo
+                    </label>
+                    <button onclick="importData()" class="btn success">
+                        <i class="fas fa-file-import"></i> Importar Dados
+                    </button>
+                </div>
             </div>
             <div class="table-container">
                 <table id="importedTable">
@@ -26,51 +34,65 @@
                         <tr>
                             <th>Data</th>
                             <th>Tipo</th>
-                            <th>Ordem</th>
                             <th>Atividade</th>
-                            <th>Wise</th>
+                            <th>WISE</th>
                             <th>Mantenedor</th>
+                            <th>Observações</th>
                             <th>Checklist</th>
                             <th>Ações</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <!-- Linhas serão inseridas aqui -->
-                    </tbody>
+                    <tbody></tbody>
                 </table>
             </div>
-        </div>
-        <div class="section">
-            <h2>Adicionar Dados Manualmente</h2>
+        </section>
+
+        <section class="card manual-section">
+            <div class="card-header">
+                <h2><i class="fas fa-edit"></i> Cadastro Manual</h2>
+            </div>
             <form id="manualForm" class="grid-form">
                 <div class="form-group">
                     <label for="data">Data:</label>
-                    <input type="date" id="data" name="data" required>
+                    <input type="date" id="data" required>
                 </div>
                 <div class="form-group">
                     <label for="tipo">Tipo:</label>
-                    <input type="text" id="tipo" name="tipo" required>
+                    <select id="tipo" required>
+                        <option value="">Selecione...</option>
+                        <option>Preventiva</option>
+                        <option>Corretiva</option>
+                        <option>Preditiva</option>
+                    </select>
                 </div>
                 <div class="form-group">
                     <label for="atividade">Atividade:</label>
-                    <input type="text" id="atividade" name="atividade" required>
+                    <input type="text" id="atividade" required>
                 </div>
                 <div class="form-group">
-                    <label for="wise">Wise:</label>
-                    <input type="text" id="wise" name="wise" required>
+                    <label for="wise">WISE:</label>
+                    <input type="text" id="wise" required>
                 </div>
                 <div class="form-group">
                     <label for="mantenedor">Mantenedor:</label>
-                    <input type="text" id="mantenedor" name="mantenedor" required>
+                    <input type="text" id="mantenedor" required>
                 </div>
                 <div class="form-group full-width">
-                    <label for="observacao">Observação:</label>
-                    <textarea id="observacao" name="observacao" required></textarea>
+                    <label for="observacao">Observações:</label>
+                    <textarea id="observacao" rows="3"></textarea>
                 </div>
                 <div class="form-group full-width">
-                    <button type="button" onclick="addManualData()" class="btn primary">Adicionar</button>
+                    <button type="button" onclick="addManualData()" class="btn primary">
+                        <i class="fas fa-plus-circle"></i> Adicionar Registro
+                    </button>
                 </div>
             </form>
+
+            <div class="table-actions">
+                <button onclick="exportToPDF()" class="btn danger">
+                    <i class="fas fa-file-pdf"></i> Exportar PDF
+                </button>
+            </div>
             <div class="table-container">
                 <table id="manualTable">
                     <thead>
@@ -78,19 +100,16 @@
                             <th>Data</th>
                             <th>Tipo</th>
                             <th>Atividade</th>
-                            <th>Wise</th>
+                            <th>WISE</th>
                             <th>Mantenedor</th>
-                            <th>Observação</th>
+                            <th>Observações</th>
                             <th>Ações</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <!-- Linhas serão inseridas aqui -->
-                    </tbody>
+                    <tbody></tbody>
                 </table>
             </div>
-            <button onclick="exportToPDF()" class="btn danger">Exportar para PDF</button>
-        </div>
+        </section>
     </div>
     <script src="script.js"></script>
 </body>
